# DIY-Guide-Chatbot

./: .gitignore  README.md  app.py  code1.py  main.py  pyproject.toml  render.yaml  requirements.txt  voice_of_the_doctor.py  websearch.py
.config/pulse/: cookie
static/css/: styles.css
static/js/: audio.js  chat.js  search.js  storage.js
templates/: index.html
