[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=2025.4.4",
    "flask>=3.1.0",
    "google-generativeai>=0.8.4",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
    "python-dotenv>=1.1.0",
    "werkzeug>=3.1.3",
]
