[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=0.1.0",
    "flask>=3.1.0",
    "google-genai",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
    "python-dotenv>=1.1.0",
    "werkzeug>=3.1.3",
]
